# platefulai

./: .gitignore  LICENSE  Makefile  README.MD  pyproject.toml
recipe_app/: database.py  main.py  recipe_app.db  requirements.txt  test_app.py
recipe_app/models/: __init__.py  calendar.py  recipe.py  shopping.py
recipe_app/routes/: __init__.py  calendar.py  nutrition.py  recipes.py  shopping.py
recipe_app/services/: __init__.py  shopping_list.py  usda_api.py
recipe_app/static/css/: main.css
recipe_app/static/js/: main.js
recipe_app/static/templates/: index.html
recipe_app/static/templates/calendar/: index.html
recipe_app/static/templates/recipes/: detail.html  edit.html  index.html  new.html
recipe_app/static/templates/shopping/: categorized.html  list.html  print_categorized.html  print_list.html
recipe_app/templates/: test.html
templates/: base.html  index.html
tests/: test_health.py
